Apply minusClick result to summary section

--- a/templates/HwangPo.html
+++ b/templates/HwangPo.html
@@ -157,6 +157,7 @@
                 total -= price
             }
             $('#totalPrice').val(injectComma(total));
+            showSelectedList()
         }
 
 
