--- a/templates/HwangPo.html
+++ b/templates/HwangPo.html
@@ -51,6 +51,7 @@
     </script>
 
     <script>
+        let data = {};
         let total = 0;
 
         $(document).ready(function () {
@@ -137,7 +138,7 @@
 
             $(`#numBox${menu}`).val(plusNum);
             total += price;
-            $('#totalPrice').val(injectComma(total));
+            data[menu] = price * plusNum;
 
             $(`input:checkbox[name=${menu}]`).prop("checked", true);
             showSelectedList()
@@ -150,27 +151,32 @@
             if (minusNum === 0) {
                 total -= price
                 $(`#numBox${menu}`).val(0);
+                delete data[menu];
                 $(`input:checkbox[name=${menu}]`).prop("checked", false);
             } else if (minusNum < 0) {
                 $(`#numBox${menu}`).val(0);
+                delete data[menu];
                 $(`input:checkbox[name=${menu}]`).prop("checked", false);
             } else {
                 $(`#numBox${menu}`).val(minusNum);
                 total -= price
+                data[menu] = price * minusNum;
+                $(`input:checkbox[name=${menu}]`).prop("checked", true);
             }
-            $('#totalPrice').val(injectComma(total));
             showSelectedList()
         }
 
 
         // 체크박스를 누를 때마다 특정 요소에 텍스트를 추가하는 함수
         function showSelectedList() {
+            let tempTotal = 0;
             let selectedMenu = []
 
             $('input[type="checkbox"]:checked').each(function (index, element) {
                 let menuName = $(this).attr('name')
                 let amount = $(`#numBox${menuName}`).val()
                 selectedMenu.push($(this).val() + ' : ' + amount + '개')
+                tempTotal += data[menuName]
             });
 
 
@@ -178,6 +184,8 @@
             for (let i = 0; i < selectedMenu.length; i++) {
                 $('#selectedMenuList').append(`<div>${selectedMenu[i]}</div>`)
             }
+
+            $('#totalPrice').val(injectComma(tempTotal));
         }
 
     </script>
